Part-3/TinyC3_22CS10075_22CS30025.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    INVALID_TOKEN
    HASH


Grammar

    0 $accept: translation_unit $end

    1 M: ε

    2 N: ε

    3 X: ε

    4 blocktable: ε

    5 changetable: ε

    6 primary_expression: IDENTIFIER
    7                   | CONSTANT_INT
    8                   | CONSTANT_FLOAT
    9                   | CONSTANT_CHAR
   10                   | LITERAL
   11                   | LP expression RP

   12 postfix_expression: primary_expression
   13                   | postfix_expression SQ_BRACKET_L expression SQ_BRACKET_R
   14                   | postfix_expression LP argument_expression_list_opt RP
   15                   | postfix_expression PERIOD IDENTIFIER
   16                   | postfix_expression ARROW IDENTIFIER
   17                   | postfix_expression INCREMENT
   18                   | postfix_expression DECREMENT
   19                   | LP type_name RP CURLY_BRACKET_L initializer_list CURLY_BRACKET_R
   20                   | LP type_name RP CURLY_BRACKET_L initializer_list COMMA CURLY_BRACKET_R

   21 argument_expression_list_opt: argument_expression_list
   22                             | ε

   23 argument_expression_list: assignment_expression
   24                         | argument_expression_list COMMA assignment_expression

   25 unary_expression: postfix_expression
   26                 | INCREMENT unary_expression
   27                 | DECREMENT unary_expression
   28                 | unary_operator cast_expression
   29                 | SIZEOF unary_expression
   30                 | SIZEOF LP type_name RP

   31 unary_operator: AMPERSAND
   32               | ASTERISK
   33               | PLUS
   34               | MINUS
   35               | TILDE
   36               | EXCLAMATION

   37 cast_expression: unary_expression
   38                | LP type_name RP cast_expression

   39 multiplicative_expression: cast_expression
   40                          | multiplicative_expression ASTERISK cast_expression
   41                          | multiplicative_expression SLASH cast_expression
   42                          | multiplicative_expression PERCENT cast_expression

   43 additive_expression: multiplicative_expression
   44                    | additive_expression PLUS multiplicative_expression
   45                    | additive_expression MINUS multiplicative_expression

   46 shift_expression: additive_expression
   47                 | shift_expression LEFT_SHIFT additive_expression
   48                 | shift_expression RIGHT_SHIFT additive_expression

   49 relational_expression: shift_expression
   50                      | relational_expression LESS_THAN shift_expression
   51                      | relational_expression GREATER_THAN shift_expression
   52                      | relational_expression LESS_THAN_EQUAL shift_expression
   53                      | relational_expression GREATER_THAN_EQUAL shift_expression

   54 equality_expression: relational_expression
   55                    | equality_expression EQUAL relational_expression
   56                    | equality_expression NOT_EQUAL relational_expression

   57 and_expression: equality_expression
   58               | and_expression AMPERSAND equality_expression

   59 exclusive_or_expression: and_expression
   60                        | exclusive_or_expression CARET and_expression

   61 inclusive_or_expression: exclusive_or_expression
   62                        | inclusive_or_expression PIPE exclusive_or_expression

   63 logical_and_expression: inclusive_or_expression
   64                       | logical_and_expression LOGICAL_AND M inclusive_or_expression

   65 logical_or_expression: logical_and_expression
   66                      | logical_or_expression LOGICAL_OR M logical_and_expression

   67 conditional_expression: logical_or_expression
   68                       | logical_or_expression N QUESTION M expression N COLON M conditional_expression

   69 assignment_expression: conditional_expression
   70                      | unary_expression assignment_operator assignment_expression

   71 assignment_operator: ASSIGN
   72                    | MUL_ASSIGN
   73                    | DIV_ASSIGN
   74                    | MOD_ASSIGN
   75                    | ADD_ASSIGN
   76                    | MINUS_ASSIGN
   77                    | LEFT_SHIFT_ASSIGN
   78                    | RIGHT_SHIFT_ASSIGN
   79                    | AND_ASSIGN
   80                    | XOR_ASSIGN
   81                    | OR_ASSIGN

   82 expression: assignment_expression
   83           | expression COMMA assignment_expression

   84 constant_expression: conditional_expression

   85 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   87                       | type_specifier declaration_specifiers_opt
   88                       | type_qualifier declaration_specifiers_opt
   89                       | function_specifier declaration_specifiers_opt

   90 declaration_specifiers_opt: ε
   91                           | declaration_specifiers

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list COMMA init_declarator

   94 init_declarator_list_opt: ε
   95                         | init_declarator_list

   96 init_declarator: declarator
   97                | declarator ASSIGN initializer

   98 storage_class_specifier: EXTERN
   99                        | STATIC
  100                        | AUTO
  101                        | REGISTER

  102 type_specifier: VOID
  103               | CHAR
  104               | INT
  105               | FLOAT
  106               | LONG
  107               | SHORT
  108               | DOUBLE
  109               | SIGNED
  110               | UNSIGNED
  111               | BOOL
  112               | COMPLEX
  113               | IMAGINARY

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  115                         | type_qualifier specifier_qualifier_list_opt

  116 specifier_qualifier_list_opt: ε
  117                             | specifier_qualifier_list

  118 type_qualifier: CONST
  119               | RESTRICT
  120               | VOLATILE

  121 function_specifier: INLINE

  122 declarator: pointer direct_declarator
  123           | direct_declarator

  124 direct_declarator: IDENTIFIER
  125                  | LP declarator RP
  126                  | direct_declarator SQ_BRACKET_L type_qualifier_list assignment_expression SQ_BRACKET_R
  127                  | direct_declarator SQ_BRACKET_L type_qualifier_list SQ_BRACKET_R
  128                  | direct_declarator SQ_BRACKET_L assignment_expression SQ_BRACKET_R
  129                  | direct_declarator SQ_BRACKET_L SQ_BRACKET_R
  130                  | direct_declarator SQ_BRACKET_L STATIC type_qualifier_list assignment_expression SQ_BRACKET_R
  131                  | direct_declarator SQ_BRACKET_L STATIC assignment_expression SQ_BRACKET_R
  132                  | direct_declarator SQ_BRACKET_L type_qualifier_list ASTERISK SQ_BRACKET_R
  133                  | direct_declarator SQ_BRACKET_L ASTERISK SQ_BRACKET_R
  134                  | direct_declarator LP changetable parameter_type_list RP
  135                  | direct_declarator LP changetable RP
  136                  | direct_declarator LP identifier_list RP

  137 pointer: ASTERISK type_qualifier_list_opt
  138        | ASTERISK type_qualifier_list_opt pointer

  139 type_qualifier_list: type_qualifier
  140                    | type_qualifier_list type_qualifier

  141 type_qualifier_list_opt: ε
  142                        | type_qualifier_list

  143 parameter_type_list: parameter_list
  144                    | parameter_list COMMA ELLIPSIS

  145 parameter_list: parameter_declaration
  146               | parameter_list COMMA parameter_declaration

  147 parameter_declaration: declaration_specifiers declarator
  148                      | declaration_specifiers

  149 identifier_list: IDENTIFIER
  150                | identifier_list COMMA IDENTIFIER

  151 type_name: specifier_qualifier_list

  152 initializer: assignment_expression
  153            | CURLY_BRACKET_L initializer_list CURLY_BRACKET_R
  154            | CURLY_BRACKET_L initializer_list COMMA CURLY_BRACKET_R

  155 initializer_list: designation_opt initializer
  156                 | initializer_list COMMA designation_opt initializer

  157 designation: designator_list ASSIGN

  158 designation_opt: ε
  159                | designation

  160 designator_list: designator
  161                | designator_list designator

  162 designator: SQ_BRACKET_L constant_expression SQ_BRACKET_R
  163           | PERIOD IDENTIFIER

  164 statement: labeled_statement
  165          | compound_statement
  166          | expression_statement
  167          | selection_statement
  168          | iteration_statement
  169          | jump_statement

  170 labeled_statement: IDENTIFIER COLON M statement
  171                  | CASE constant_expression COLON statement
  172                  | DEFAULT COLON statement

  173 compound_statement: CURLY_BRACKET_L X blocktable block_item_list_opt CURLY_BRACKET_R

  174 block_item_list: block_item
  175                | block_item_list M block_item

  176 block_item_list_opt: ε
  177                    | block_item_list

  178 block_item: declaration
  179           | statement

  180 expression_statement: expression SEMICOLON
  181                     | SEMICOLON

  182 selection_statement: IF LP expression RP M statement N
  183                    | IF LP expression RP M statement N ELSE M statement
  184                    | SWITCH LP expression RP statement

  185 iteration_statement: WHILE LP X blocktable M expression RP M statement
  186                    | DO M statement M WHILE LP expression RP SEMICOLON
  187                    | FOR LP X blocktable expression_statement M expression_statement M expression N RP M statement
  188                    | FOR LP X blocktable declaration M expression_statement M expression N RP M statement
  189                    | FOR LP X blocktable declaration M expression_statement M expression_statement M expression N RP M statement

  190 jump_statement: GOTO IDENTIFIER SEMICOLON
  191               | CONTINUE SEMICOLON
  192               | BREAK SEMICOLON
  193               | RETURN expression SEMICOLON
  194               | RETURN SEMICOLON

  195 translation_unit: external_declaration
  196                 | translation_unit external_declaration

  197 external_declaration: function_definition
  198                     | declaration

  199 function_definition: declaration_specifiers declarator declaration_list_opt changetable compound_statement

  200 declaration_list: declaration
  201                 | declaration_list declaration

  202 declaration_list_opt: ε
  203                     | declaration_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 100
    RESTRICT (259) 119
    UNSIGNED (260) 110
    BREAK (261) 192
    EXTERN (262) 98
    RETURN (263) 193 194
    VOID (264) 102
    CASE (265) 171
    FLOAT (266) 105
    SHORT (267) 107
    VOLATILE (268) 120
    CHAR (269) 103
    FOR (270) 187 188 189
    SIGNED (271) 109
    WHILE (272) 185 186
    CONST (273) 118
    GOTO (274) 190
    SIZEOF (275) 29 30
    BOOL (276) 111
    CONTINUE (277) 191
    IF (278) 182 183
    STATIC (279) 99 130 131
    COMPLEX (280) 112
    DEFAULT (281) 172
    INLINE (282) 121
    STRUCT (283)
    IMAGINARY (284) 113
    DO (285) 186
    INT (286) 104
    SWITCH (287) 184
    DOUBLE (288) 108
    LONG (289) 106
    TYPEDEF (290)
    ELSE (291) 183
    REGISTER (292) 101
    UNION (293)
    INVALID_TOKEN (294)
    LP (295) 11 14 19 20 30 38 125 134 135 136 182 183 184 185 186 187 188 189
    RP (296) 11 14 19 20 30 38 125 134 135 136 182 183 184 185 186 187 188 189
    SQ_BRACKET_L (297) 13 126 127 128 129 130 131 132 133 162
    SQ_BRACKET_R (298) 13 126 127 128 129 130 131 132 133 162
    CURLY_BRACKET_L (299) 19 20 153 154 173
    CURLY_BRACKET_R (300) 19 20 153 154 173
    PERIOD (301) 15 163
    ARROW (302) 16
    INCREMENT (303) 17 26
    DECREMENT (304) 18 27
    AMPERSAND (305) 31 58
    ASTERISK (306) 32 40 132 133 137 138
    PLUS (307) 33 44
    MINUS (308) 34 45
    TILDE (309) 35
    EXCLAMATION (310) 36
    SLASH (311) 41
    PERCENT (312) 42
    LEFT_SHIFT (313) 47
    RIGHT_SHIFT (314) 48
    LESS_THAN (315) 50
    GREATER_THAN (316) 51
    LESS_THAN_EQUAL (317) 52
    GREATER_THAN_EQUAL (318) 53
    EQUAL (319) 55
    NOT_EQUAL (320) 56
    CARET (321) 60
    PIPE (322) 62
    LOGICAL_AND (323) 64
    LOGICAL_OR (324) 66
    QUESTION (325) 68
    COLON (326) 68 170 171 172
    SEMICOLON (327) 85 180 181 186 190 191 192 193 194
    ELLIPSIS (328) 144
    ASSIGN (329) 71 97 157
    MUL_ASSIGN (330) 72
    DIV_ASSIGN (331) 73
    MOD_ASSIGN (332) 74
    ADD_ASSIGN (333) 75
    MINUS_ASSIGN (334) 76
    LEFT_SHIFT_ASSIGN (335) 77
    RIGHT_SHIFT_ASSIGN (336) 78
    AND_ASSIGN (337) 79
    XOR_ASSIGN (338) 80
    OR_ASSIGN (339) 81
    COMMA (340) 20 24 83 93 144 146 150 154 156
    HASH (341)
    IDENTIFIER <st_entry> (342) 6 15 16 124 149 150 163 170 190
    CONSTANT_INT <intval> (343) 7
    LITERAL <string_type> (344) 10
    CONSTANT_FLOAT <string_type> (345) 8
    CONSTANT_CHAR <string_type> (346) 9
    "then" (347)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    M <intval> (94)
        on left: 1
        on right: 64 66 68 170 175 182 183 185 186 187 188 189
    N <statement_entry> (95)
        on left: 2
        on right: 68 182 183 187 188 189
    X (96)
        on left: 3
        on right: 173 185 187 188 189
    blocktable (97)
        on left: 4
        on right: 173 185 187 188 189
    changetable (98)
        on left: 5
        on right: 134 135 199
    primary_expression <exp_entry> (99)
        on left: 6 7 8 9 10 11
        on right: 12
    postfix_expression <ar_entry> (100)
        on left: 12 13 14 15 16 17 18 19 20
        on right: 13 14 15 16 17 18 25
    argument_expression_list_opt <intval> (101)
        on left: 21 22
        on right: 14
    argument_expression_list <intval> (102)
        on left: 23 24
        on right: 21 24
    unary_expression <ar_entry> (103)
        on left: 25 26 27 28 29 30
        on right: 26 27 29 37 70
    unary_operator <u_op> (104)
        on left: 31 32 33 34 35 36
        on right: 28
    cast_expression <ar_entry> (105)
        on left: 37 38
        on right: 28 38 39 40 41 42
    multiplicative_expression <exp_entry> (106)
        on left: 39 40 41 42
        on right: 40 41 42 43 44 45
    additive_expression <exp_entry> (107)
        on left: 43 44 45
        on right: 44 45 46 47 48
    shift_expression <exp_entry> (108)
        on left: 46 47 48
        on right: 47 48 49 50 51 52 53
    relational_expression <exp_entry> (109)
        on left: 49 50 51 52 53
        on right: 50 51 52 53 54 55 56
    equality_expression <exp_entry> (110)
        on left: 54 55 56
        on right: 55 56 57 58
    and_expression <exp_entry> (111)
        on left: 57 58
        on right: 58 59 60
    exclusive_or_expression <exp_entry> (112)
        on left: 59 60
        on right: 60 61 62
    inclusive_or_expression <exp_entry> (113)
        on left: 61 62
        on right: 62 63 64
    logical_and_expression <exp_entry> (114)
        on left: 63 64
        on right: 64 65 66
    logical_or_expression <exp_entry> (115)
        on left: 65 66
        on right: 66 67 68
    conditional_expression <exp_entry> (116)
        on left: 67 68
        on right: 68 69 84
    assignment_expression <exp_entry> (117)
        on left: 69 70
        on right: 23 24 70 82 83 126 128 130 131 152
    assignment_operator (118)
        on left: 71 72 73 74 75 76 77 78 79 80 81
        on right: 70
    expression <exp_entry> (119)
        on left: 82 83
        on right: 11 13 68 83 180 182 183 184 185 186 187 188 189 193
    constant_expression <exp_entry> (120)
        on left: 84
        on right: 162 171
    declaration (121)
        on left: 85
        on right: 178 188 189 198 200 201
    declaration_specifiers (122)
        on left: 86 87 88 89
        on right: 85 91 147 148 199
    declaration_specifiers_opt (123)
        on left: 90 91
        on right: 86 87 88 89
    init_declarator_list (124)
        on left: 92 93
        on right: 93 95
    init_declarator_list_opt (125)
        on left: 94 95
        on right: 85
    init_declarator <st_entry> (126)
        on left: 96 97
        on right: 92 93
    storage_class_specifier (127)
        on left: 98 99 100 101
        on right: 86
    type_specifier (128)
        on left: 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 87 114
    specifier_qualifier_list (129)
        on left: 114 115
        on right: 117 151
    specifier_qualifier_list_opt (130)
        on left: 116 117
        on right: 114 115
    type_qualifier (131)
        on left: 118 119 120
        on right: 88 115 139 140
    function_specifier (132)
        on left: 121
        on right: 89
    declarator <st_entry> (133)
        on left: 122 123
        on right: 96 97 125 147 199
    direct_declarator <st_entry> (134)
        on left: 124 125 126 127 128 129 130 131 132 133 134 135 136
        on right: 122 123 126 127 128 129 130 131 132 133 134 135 136
    pointer <s_type> (135)
        on left: 137 138
        on right: 122 138
    type_qualifier_list (136)
        on left: 139 140
        on right: 126 127 130 132 140 142
    type_qualifier_list_opt (137)
        on left: 141 142
        on right: 137 138
    parameter_type_list (138)
        on left: 143 144
        on right: 134
    parameter_list (139)
        on left: 145 146
        on right: 143 144 146
    parameter_declaration (140)
        on left: 147 148
        on right: 145 146
    identifier_list (141)
        on left: 149 150
        on right: 136 150
    type_name (142)
        on left: 151
        on right: 19 20 30 38
    initializer <st_entry> (143)
        on left: 152 153 154
        on right: 97 155 156
    initializer_list (144)
        on left: 155 156
        on right: 19 20 153 154 156
    designation (145)
        on left: 157
        on right: 159
    designation_opt (146)
        on left: 158 159
        on right: 155 156
    designator_list (147)
        on left: 160 161
        on right: 157 161
    designator (148)
        on left: 162 163
        on right: 160 161
    statement <statement_entry> (149)
        on left: 164 165 166 167 168 169
        on right: 170 171 172 179 182 183 184 185 186 187 188 189
    labeled_statement <statement_entry> (150)
        on left: 170 171 172
        on right: 164
    compound_statement <statement_entry> (151)
        on left: 173
        on right: 165 199
    block_item_list <statement_entry> (152)
        on left: 174 175
        on right: 175 177
    block_item_list_opt <statement_entry> (153)
        on left: 176 177
        on right: 173
    block_item <statement_entry> (154)
        on left: 178 179
        on right: 174 175
    expression_statement <exp_entry> (155)
        on left: 180 181
        on right: 166 187 188 189
    selection_statement <statement_entry> (156)
        on left: 182 183 184
        on right: 167
    iteration_statement <statement_entry> (157)
        on left: 185 186 187 188 189
        on right: 168
    jump_statement <statement_entry> (158)
        on left: 190 191 192 193 194
        on right: 169
    translation_unit (159)
        on left: 195 196
        on right: 0 196
    external_declaration (160)
        on left: 197 198
        on right: 195 196
    function_definition (161)
        on left: 199
        on right: 197
    declaration_list (162)
        on left: 200 201
        on right: 201 203
    declaration_list_opt (163)
        on left: 202 203
        on right: 199


State 0

    0 $accept: • translation_unit $end

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    declaration              go to state 21
    declaration_specifiers   go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    translation_unit         go to state 27
    external_declaration     go to state 28
    function_definition      go to state 29


State 1

  100 storage_class_specifier: AUTO •

    $default  reduce using rule 100 (storage_class_specifier)


State 2

  119 type_qualifier: RESTRICT •

    $default  reduce using rule 119 (type_qualifier)


State 3

  110 type_specifier: UNSIGNED •

    $default  reduce using rule 110 (type_specifier)


State 4

   98 storage_class_specifier: EXTERN •

    $default  reduce using rule 98 (storage_class_specifier)


State 5

  102 type_specifier: VOID •

    $default  reduce using rule 102 (type_specifier)


State 6

  105 type_specifier: FLOAT •

    $default  reduce using rule 105 (type_specifier)


State 7

  107 type_specifier: SHORT •

    $default  reduce using rule 107 (type_specifier)


State 8

  120 type_qualifier: VOLATILE •

    $default  reduce using rule 120 (type_qualifier)


State 9

  103 type_specifier: CHAR •

    $default  reduce using rule 103 (type_specifier)


State 10

  109 type_specifier: SIGNED •

    $default  reduce using rule 109 (type_specifier)


State 11

  118 type_qualifier: CONST •

    $default  reduce using rule 118 (type_qualifier)


State 12

  111 type_specifier: BOOL •

    $default  reduce using rule 111 (type_specifier)


State 13

   99 storage_class_specifier: STATIC •

    $default  reduce using rule 99 (storage_class_specifier)


State 14

  112 type_specifier: COMPLEX •

    $default  reduce using rule 112 (type_specifier)


State 15

  121 function_specifier: INLINE •

    $default  reduce using rule 121 (function_specifier)


State 16

  113 type_specifier: IMAGINARY •

    $default  reduce using rule 113 (type_specifier)


State 17

  104 type_specifier: INT •

    $default  reduce using rule 104 (type_specifier)


State 18

  108 type_specifier: DOUBLE •

    $default  reduce using rule 108 (type_specifier)


State 19

  106 type_specifier: LONG •

    $default  reduce using rule 106 (type_specifier)


State 20

  101 storage_class_specifier: REGISTER •

    $default  reduce using rule 101 (storage_class_specifier)


State 21

  198 external_declaration: declaration •

    $default  reduce using rule 198 (external_declaration)


State 22

   85 declaration: declaration_specifiers • init_declarator_list_opt SEMICOLON
  199 function_definition: declaration_specifiers • declarator declaration_list_opt changetable compound_statement

    LP          shift, and go to state 30
    ASTERISK    shift, and go to state 31
    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 94 (init_declarator_list_opt)

    init_declarator_list      go to state 33
    init_declarator_list_opt  go to state 34
    init_declarator           go to state 35
    declarator                go to state 36
    direct_declarator         go to state 37
    pointer                   go to state 38


State 23

   86 declaration_specifiers: storage_class_specifier • declaration_specifiers_opt

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 39
    declaration_specifiers_opt  go to state 40
    storage_class_specifier     go to state 23
    type_specifier              go to state 24
    type_qualifier              go to state 25
    function_specifier          go to state 26


State 24

   87 declaration_specifiers: type_specifier • declaration_specifiers_opt

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 39
    declaration_specifiers_opt  go to state 41
    storage_class_specifier     go to state 23
    type_specifier              go to state 24
    type_qualifier              go to state 25
    function_specifier          go to state 26


State 25

   88 declaration_specifiers: type_qualifier • declaration_specifiers_opt

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 39
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 23
    type_specifier              go to state 24
    type_qualifier              go to state 25
    function_specifier          go to state 26


State 26

   89 declaration_specifiers: function_specifier • declaration_specifiers_opt

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 39
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 23
    type_specifier              go to state 24
    type_qualifier              go to state 25
    function_specifier          go to state 26


State 27

    0 $accept: translation_unit • $end
  196 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 44
    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20

    declaration              go to state 21
    declaration_specifiers   go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    external_declaration     go to state 45
    function_definition      go to state 29


State 28

  195 translation_unit: external_declaration •

    $default  reduce using rule 195 (translation_unit)


State 29

  197 external_declaration: function_definition •

    $default  reduce using rule 197 (external_declaration)


State 30

  125 direct_declarator: LP • declarator RP

    LP          shift, and go to state 30
    ASTERISK    shift, and go to state 31
    IDENTIFIER  shift, and go to state 32

    declarator         go to state 46
    direct_declarator  go to state 37
    pointer            go to state 38


State 31

  137 pointer: ASTERISK • type_qualifier_list_opt
  138        | ASTERISK • type_qualifier_list_opt pointer

    RESTRICT  shift, and go to state 2
    VOLATILE  shift, and go to state 8
    CONST     shift, and go to state 11

    $default  reduce using rule 141 (type_qualifier_list_opt)

    type_qualifier           go to state 47
    type_qualifier_list      go to state 48
    type_qualifier_list_opt  go to state 49


State 32

  124 direct_declarator: IDENTIFIER •

    $default  reduce using rule 124 (direct_declarator)


State 33

   93 init_declarator_list: init_declarator_list • COMMA init_declarator
   95 init_declarator_list_opt: init_declarator_list •

    COMMA  shift, and go to state 50

    $default  reduce using rule 95 (init_declarator_list_opt)


State 34

   85 declaration: declaration_specifiers init_declarator_list_opt • SEMICOLON

    SEMICOLON  shift, and go to state 51


State 35

   92 init_declarator_list: init_declarator •

    $default  reduce using rule 92 (init_declarator_list)


State 36

   96 init_declarator: declarator •
   97                | declarator • ASSIGN initializer
  199 function_definition: declaration_specifiers declarator • declaration_list_opt changetable compound_statement

    AUTO       shift, and go to state 1
    RESTRICT   shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    EXTERN     shift, and go to state 4
    VOID       shift, and go to state 5
    FLOAT      shift, and go to state 6
    SHORT      shift, and go to state 7
    VOLATILE   shift, and go to state 8
    CHAR       shift, and go to state 9
    SIGNED     shift, and go to state 10
    CONST      shift, and go to state 11
    BOOL       shift, and go to state 12
    STATIC     shift, and go to state 13
    COMPLEX    shift, and go to state 14
    INLINE     shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    INT        shift, and go to state 17
    DOUBLE     shift, and go to state 18
    LONG       shift, and go to state 19
    REGISTER   shift, and go to state 20
    ASSIGN     shift, and go to state 52

    CURLY_BRACKET_L  reduce using rule 202 (declaration_list_opt)
    $default         reduce using rule 96 (init_declarator)

    declaration              go to state 53
    declaration_specifiers   go to state 54
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    declaration_list         go to state 55
    declaration_list_opt     go to state 56


State 37

  123 declarator: direct_declarator •
  126 direct_declarator: direct_declarator • SQ_BRACKET_L type_qualifier_list assignment_expression SQ_BRACKET_R
  127                  | direct_declarator • SQ_BRACKET_L type_qualifier_list SQ_BRACKET_R
  128                  | direct_declarator • SQ_BRACKET_L assignment_expression SQ_BRACKET_R
  129                  | direct_declarator • SQ_BRACKET_L SQ_BRACKET_R
  130                  | direct_declarator • SQ_BRACKET_L STATIC type_qualifier_list assignment_expression SQ_BRACKET_R
  131                  | direct_declarator • SQ_BRACKET_L STATIC assignment_expression SQ_BRACKET_R
  132                  | direct_declarator • SQ_BRACKET_L type_qualifier_list ASTERISK SQ_BRACKET_R
  133                  | direct_declarator • SQ_BRACKET_L ASTERISK SQ_BRACKET_R
  134                  | direct_declarator • LP changetable parameter_type_list RP
  135                  | direct_declarator • LP changetable RP
  136                  | direct_declarator • LP identifier_list RP

    LP            shift, and go to state 57
    SQ_BRACKET_L  shift, and go to state 58

    $default  reduce using rule 123 (declarator)


State 38

  122 declarator: pointer • direct_declarator

    LP          shift, and go to state 30
    IDENTIFIER  shift, and go to state 32

    direct_declarator  go to state 59


State 39

   91 declaration_specifiers_opt: declaration_specifiers •

    $default  reduce using rule 91 (declaration_specifiers_opt)


State 40

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt •

    $default  reduce using rule 86 (declaration_specifiers)


State 41

   87 declaration_specifiers: type_specifier declaration_specifiers_opt •

    $default  reduce using rule 87 (declaration_specifiers)


State 42

   88 declaration_specifiers: type_qualifier declaration_specifiers_opt •

    $default  reduce using rule 88 (declaration_specifiers)


State 43

   89 declaration_specifiers: function_specifier declaration_specifiers_opt •

    $default  reduce using rule 89 (declaration_specifiers)


State 44

    0 $accept: translation_unit $end •

    $default  accept


State 45

  196 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 196 (translation_unit)


State 46

  125 direct_declarator: LP declarator • RP

    RP  shift, and go to state 60


State 47

  139 type_qualifier_list: type_qualifier •

    $default  reduce using rule 139 (type_qualifier_list)


State 48

  140 type_qualifier_list: type_qualifier_list • type_qualifier
  142 type_qualifier_list_opt: type_qualifier_list •

    RESTRICT  shift, and go to state 2
    VOLATILE  shift, and go to state 8
    CONST     shift, and go to state 11

    $default  reduce using rule 142 (type_qualifier_list_opt)

    type_qualifier  go to state 61


State 49

  137 pointer: ASTERISK type_qualifier_list_opt •
  138        | ASTERISK type_qualifier_list_opt • pointer

    ASTERISK  shift, and go to state 31

    $default  reduce using rule 137 (pointer)

    pointer  go to state 62


State 50

   93 init_declarator_list: init_declarator_list COMMA • init_declarator

    LP          shift, and go to state 30
    ASTERISK    shift, and go to state 31
    IDENTIFIER  shift, and go to state 32

    init_declarator    go to state 63
    declarator         go to state 64
    direct_declarator  go to state 37
    pointer            go to state 38

